--- a/index.html
+++ b/index.html
@@ -148,6 +148,67 @@
                 </div>
             </article>
         </section>
+        <footer>
+            <div class="menu">
+                <div class="list">
+                    <div class="title">Categorias</div>
+                    <ul>
+                        <li>
+                            <a href="#">Cocina</a>
+                        </li>
+                        <li>
+                            <a href="#">Oficina</a>
+                        </li>
+                        <li>
+                            <a href="#">Jardin</a>
+                        </li>
+                        <li>
+                            <a href="#">Cochera</a>
+                        </li>
+                        <li>
+                            <a href="#">Dormitorios</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list">
+                    <div class="title">Sobre nosotros</div>
+                    <ul>
+                        <li>
+                            <a href="#">Nuestra histori</a>
+                        </li>
+                        <li>
+                            <a href="#">Mision Vision y Valores</a>
+                        </li>
+                        <li>
+                            <a href="#">Carreras</a>
+                        </li>
+                        <li>
+                            <a href="#">Politica de Privacidad</a>
+                        </li>
+                        <li>
+                            <a href="#">Terminos de servicio</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list">
+                    <div class="title">Soporte</div>
+                    <ul>
+                        <li>
+                            <a href="#">Preguntas frecuentes</a>
+                        </li>
+                        <li>
+                            <a href="#">Ayuda en linea</a>
+                        </li>
+                        <li>
+                            <a href="#">Confianza y Seguridad</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="text">
+                Todos los derechos reservados TiendaMuebles
+            </div>
+        </footer>
     </div>
 </body>
 </html>
